BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/MC_Cycle_Product_vod__c.object
<CustomObject>
    <description>Defines the list of Products a Cycle Channel has.</description>
    <fields>
        <fullName>Channel_Label_vod__c</fullName>
        <description>Channel Label from the Channel record.</description>
        <formula>Cycle_Channel_vod__r.Channel_Label_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Channel_vod__c</fullName>
        <description>The channel that the Product and/or Detail Group is related to.</description>
        <label>Channel</label>
        <referenceTo>MC_Cycle_Channel_vod__c</referenceTo>
        <relationshipLabel>MC Cycle Products</relationshipLabel>
        <relationshipName>MC_Cycle_Products_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cycle_vod__c</fullName>
        <description>Cycle Name from the respective Cycle.</description>
        <formula>Cycle_Channel_vod__r.Cycle_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail Product Group that the product is associated to. Product Type must equal Detail Group</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>MC Cycle Products (Detail Group)</relationshipLabel>
        <relationshipName>MC_Cycle_Detail_Groups_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External ID for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Weight_vod__c</fullName>
        <description>Value associated to the activities for this product / channel combination.</description>
        <label>Weight</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product that is associated to the channel. Product Type must equal Detail.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Cycle Products</relationshipLabel>
        <relationshipName>MC_Cycle_Products_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>System set to prevent duplicate products on a channel. Value will be Cycle Channel.Id + __ + Product.Id</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MC Cycle Product</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Cycle Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC Cycle Products</pluralLabel>
    <recordTypes>
        <fullName>Product_vod</fullName>
        <active>true</active>
        <description>Product only</description>
        <label>Product_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>